--- a/main/assets/css/custom-style/_typography.scss
+++ b/main/assets/css/custom-style/_typography.scss
@@ -94,10 +94,13 @@ h3 {
   color: var(--color-primary-lighter);
   font-weight: 700;
   transition: all .2s;
-  &:hover {
+  &:hover,
+  &.current {
     color: var(--color-primary);
   }
 }
+
+
 
 mark {
   background-color: alpha(var(--color-accent), 0.2);
