--- a/main/assets/css/pages/_about.scss
+++ b/main/assets/css/pages/_about.scss
@@ -46,7 +46,8 @@
    @include breakpoint(md) {
       .leaders {
          display: grid;
-         grid-template-columns: 0.3fr 0.6fr;
+         grid-template-columns: 0.3333fr 0.6666667fr;
+         justify-content: space-between;
       }
       .cards {
          row-gap: var(--space-xl);
@@ -65,6 +66,7 @@
             align-items: center;
             justify-content: center;
             img {
+               transition: all 0.2s;
                width: 40px;
                filter: invert(100%) sepia(96%) saturate(15%) hue-rotate(212deg) brightness(104%) contrast(104%);
             }
@@ -73,6 +75,9 @@
          .social:hover {
             opacity: 1;
             background-color: alpha(var(--color-primary), 0.5);
+            img:hover {
+               filter: invert(61%) sepia(45%) saturate(1463%) hue-rotate(343deg) brightness(102%) contrast(92%);
+            }
          }
       }
    }
