--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -7228,16 +7228,12 @@ header {
   .about .cards .card {
     display: grid;
     gap: var(--space-xxs); }
-    .about .cards .card h3 {
-      margin-top: 1.5rem; }
-  .about .cards .card__img {
-    width: 100%; }
   .about .cards .card__role {
     color: hsla(var(--color-primary-h), var(--color-primary-s), var(--color-primary-l), 0.75); }
   .about .cards .social > :first-child {
     margin-right: var(--space-lg); }
   .about .cards .social img {
-    width: 32px; }
+    width: 2rem; }
 
 @media (min-width: 48rem) {
   .about .cards {
@@ -7252,7 +7248,9 @@ header {
     grid-template-columns: 0.3333fr 0.6666667fr;
     justify-content: space-between; }
   .about .cards {
-    row-gap: var(--space-xl); }
+    row-gap: var(--space-xl);
+    -moz-column-gap: var(var(--space-sm));
+         column-gap: var(var(--space-sm)); }
     .about .cards .card__img {
       grid-row: 1;
       grid-column: 1;
@@ -7267,7 +7265,7 @@ header {
       justify-content: center; }
       .about .cards .social img {
         transition: all 0.2s;
-        width: 40px;
+        width: 2.5rem;
         filter: invert(100%) sepia(96%) saturate(15%) hue-rotate(212deg) brightness(104%) contrast(104%); }
     .about .cards .social:hover {
       opacity: 1;
