--- a/main/assets/css/pages/_home.scss
+++ b/main/assets/css/pages/_home.scss
@@ -65,22 +65,17 @@ header {
 // WELCOME SECTION
 
 .welcome {
-  position: relative;
-
-  .horizontal-line {
-    position: absolute;
-    height: 1px;
-    width: 4.125rem;
-    background-color: var(--color-black-light);
-    top: -4.25rem;
-    left: 0;
-  }
 
   .text-component {
     --text-vspace-multiplier: 1.5;
     h2 {
       --text-vspace-multiplier: 2.8;
     }
+  }
+
+
+  .container {
+    margin-top: var(--horizontal-line-bottom-margin);
   }
 
   p {
