complete hz line component

--- a/main/assets/css/_custom-style.scss
+++ b/main/assets/css/_custom-style.scss
@@ -13,6 +13,6 @@
 @import 'custom-style/buttons';
 @import 'custom-style/forms';
 @import 'custom-style/util';
-@import 'pages/home';
+@import 'pages/index';
 @import 'pages/portfolio';
 @import 'pages/about';
