--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -6839,23 +6839,6 @@ html:not(.js) .no-js\:is-hidden {
     .margin-top-menu {
       margin-top: initial; } }
 
-.horizontal-line {
-  position: absolute;
-  height: 1px;
-  width: 4.125rem;
-  background-color: var(--color-black-light);
-  top: 0;
-  left: 0; }
-
-:root {
-  --horizontal-line-bottom-margin: 4rem; }
-  @media (min-width: 48rem) {
-    :root {
-      --horizontal-line-bottom-margin: 5rem; } }
-  @media (min-width: 64rem) {
-    :root {
-      --horizontal-line-bottom-margin: 6.5rem; } }
-
 .flow-content {
   --section-spacer-bottom: 6rem;
   --section-spacer-top: 4.25rem; }
@@ -7158,9 +7141,6 @@ header {
   .welcome .text-component h2 {
     --text-vspace-multiplier: 2.8; }
 
-.welcome .container {
-  margin-top: var(--horizontal-line-bottom-margin); }
-
 .welcome p {
   color: var(--color-primary-light); }
 
@@ -7238,12 +7218,6 @@ header {
 
 .about .heritage .text-component {
   --text-vspace-multiplier: 2; }
-
-.about .heritage .horizontal-line {
-  top: 0; }
-
-.about .heritage__content {
-  margin-top: var(--horizontal-line-bottom-margin); }
 
 @media (min-width: 64rem) {
   .about .heritage {
@@ -7431,6 +7405,18 @@ Usage: codyhouse.co/license
     .footer__logo {
       --logo-size: 12.5rem;
       padding: 5rem 3rem; } }
+
+.horizontal-line {
+  height: 1px;
+  width: 4.125rem;
+  background-color: var(--color-black-light);
+  margin-bottom: var(--hz-line-spacer, 4rem); }
+  @media (min-width: 48rem) {
+    .horizontal-line {
+      --hz-line-spacer: 5rem; } }
+  @media (min-width: 64rem) {
+    .horizontal-line {
+      --hz-line-spacer: 6.5rem; } }
 
 :root {
   --nav-bar-height: 6rem; }
