--- a/main/assets/css/custom-style/_shared-styles.scss
+++ b/main/assets/css/custom-style/_shared-styles.scss
@@ -1,3 +1,19 @@
+.container.container--outer {
+  --component-padding: 0;
+  --sides-padding: var(--space-xl);
+  padding-left: var(--sides-padding);
+  padding-right: var(--sides-padding);
+  max-width: 69.375rem;;
+
+  @include breakpoint(sm) {
+    --sides-padding: 0;
+    --component-padding: 35.75rem;
+  }
+}
+
+
+
+
 
 .container-outer {
   --outer-container-column: 8.5vw;
@@ -49,25 +65,25 @@
   }
 }
 
-.container {
-  :is(h1,h2,h3) {
-    max-width: 9ch;
-  }
+// .container {
+//   :is(h1,h2,h3) {
+//     max-width: 9ch;
+//   }
 
-  --component-padding: var(--outer-container-column);
+//   --component-padding: var(--outer-container-column);
 
-  @include breakpoint(sm) {
-    --component-padding: 3.3rem;
-  }
+//   @include breakpoint(sm) {
+//     --component-padding: 3.3rem;
+//   }
 
-  @include breakpoint(md) {
-    //another way to set the component so that it can be overwritten
-    --container-padding: 11.875rem;
-    --component-padding: var(--container-padding);
+//   @include breakpoint(md) {
+//     //another way to set the component so that it can be overwritten
+//     --container-padding: 11.875rem;
+//     --component-padding: var(--container-padding);
 
-    p {
-      max-width: 28rem;
-    }
-  }
-}
+//     p {
+//       max-width: 28rem;
+//     }
+//   }
+// }
 
