--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -6814,53 +6814,26 @@ html:not(.js) .no-js\:is-hidden {
       --space-xxxl: calc(5.063 * var(--space-unit));
       --space-xxxxl: calc(7.59 * var(--space-unit)); } } }
 
+body {
+  display: flow-root; }
+
 .container.container--outer {
   --component-padding: 0;
   --sides-padding: var(--space-xl);
   padding-left: var(--sides-padding);
   padding-right: var(--sides-padding);
-  max-width: 69.375rem; }
+  max-width: 69.375rem;
+  background-color: green; }
   @media (min-width: 48rem) {
     .container.container--outer {
       --sides-padding: 0;
-      --component-padding: 35.75rem; } }
-
-.container-outer {
-  --outer-container-column: 8.5vw;
-  max-width: 90rem;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: [main-start] var(--outer-container-column) [content-start] minmax(19.4385rem, 69.375rem) [content-end] var(--outer-container-column) [main-end]; }
-  .container-outer > * {
-    grid-column-start: content-start; }
-  @media (min-width: 48rem) {
-    .container-outer {
-      --outer-container-column: 11.45vw; } }
-  @media (min-width: 64rem) {
-    .container-outer {
-      --outer-container-column: MIN(10.3125rem, 11.45vw); } }
-
-.vertical-content {
-  grid-column-start: main-start;
-  grid-row: span 2; }
+      --component-padding: 11.45vw; } }
 
 .margin-top-menu {
   margin-top: var(--nav-bar-height); }
   @media (min-width: 48rem) {
     .margin-top-menu {
       margin-top: initial; } }
-
-.flow-content {
-  --section-spacer-bottom: 6rem;
-  --section-spacer-top: 4.25rem; }
-  .flow-content > :first-child:not(:only-child) {
-    margin-top: var(--section-spacer-top); }
-  .flow-content > * {
-    margin-bottom: var(--section-spacer-bottom); }
-  @media (min-width: 48rem) {
-    .flow-content {
-      --section-spacer-bottom: 12.5rem;
-      --section-spacer-top: var(--section-spacer-bottom); } }
 
 :root {
   --font-primary: 'Spartan', sans-serif;
@@ -7212,18 +7185,6 @@ header {
 
 .about p {
   color: var(--color-primary-light); }
-
-.about .heritage .text-component {
-  --text-vspace-multiplier: 2; }
-
-@media (min-width: 64rem) {
-  .about .heritage {
-    display: grid;
-    grid-template-columns: 40% 50%;
-    gap: 10%; }
-    .about .heritage__image {
-      background: url(../images/about/desktop/image-heritage.jpg) no-repeat;
-      background-size: cover; } }
 
 .about .cards {
   display: grid;
