--- a/main/assets/css/pages/_about.scss
+++ b/main/assets/css/pages/_about.scss
@@ -3,25 +3,41 @@
       color: var(--color-primary-light);
    }
 
+   header {
+      .text-component {
+         padding: var(--space-xxxl) 0;
+      }
+   }
+
+   @include breakpoint(sm) {
+      header {
+         .text-component {
+
+         }
+      }
+   }
 
    //HERITAGE SECTION
-//    .heritage {
-//       .text-component {
-//          --text-vspace-multiplier: 2;
-//       }
+   .heritage {
+      .text-component {
+         --text-vspace-multiplier: 2;
+      }
 
 
-//       @include breakpoint(md) {
-//          display: grid;
-//          grid-template-columns: 40% 50%;
-//          gap: 10%;
+      @include breakpoint(md) {
+         &__main {
+           display: grid;
+            grid-template-columns: 40% 50%;
+            gap: 15%;
+         }
 
-//       &__image {
-//          background: url(../images/about/desktop/image-heritage.jpg) no-repeat;
-//          background-size: cover;
-//       }
-//    }
-// }
+
+      &__image {
+         background: url(../images/about/desktop/image-heritage.jpg) no-repeat;
+         background-size: cover;
+      }
+   }
+}
 
    //LEADERS SECTION
 
