--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -7237,7 +7237,7 @@ header {
          column-gap: var(--space-lg); } }
 
 @media (min-width: 64rem) {
-  .about .leaders {
+  .about .leaders__main {
     display: grid;
     grid-template-columns: 0.3333fr 0.6666667fr;
     justify-content: space-between; }
