--- a/main/assets/css/custom-style/_util.scss
+++ b/main/assets/css/custom-style/_util.scss
@@ -33,8 +33,7 @@
 }
 
 .container-width\@md {
-
   @include breakpoint(md) {
-    width: var(--container-width);
+    --component-padding: var(--container-component-padding);
   }
 }
