--- a/main/assets/css/custom-style/_util.scss
+++ b/main/assets/css/custom-style/_util.scss
@@ -32,6 +32,13 @@
   }
 }
 
+
+.container-width\@sm{
+  @include breakpoint(sm) {
+    --component-padding: var(--container-component-padding);
+  }
+}
+
 .container-width\@md {
   @include breakpoint(md) {
     --component-padding: var(--container-component-padding);
