--- a/main/assets/css/pages/_index.scss
+++ b/main/assets/css/pages/_index.scss
@@ -1,12 +1,5 @@
-// HEADER
 
-header {
-  position: relative;
-}
-
-
-// SLIDES
-
+//HEADER SLIDES
 .slide {
   padding: 6.875rem 0;
   position: relative;
