fixed mobile menu

--- a/main/assets/css/components/_navigation.scss
+++ b/main/assets/css/components/_navigation.scss
@@ -33,7 +33,7 @@
   padding: 3rem;
   position: absolute;
   right: 0;
-  left: var(--sides-padding);
+  left: var(--container-component-padding);
   top: var(--nav-bar-height);
   transform: translateX(100%);
   display: grid;
