--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -7432,7 +7432,7 @@ Usage: codyhouse.co/license
   padding: 3rem;
   position: absolute;
   right: 0;
-  left: var(--sides-padding);
+  left: var(--container-component-padding);
   top: var(--nav-bar-height);
   transform: translateX(100%);
   display: grid;
