--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -6830,7 +6830,7 @@ body {
     .container--outer {
       --component-padding: var(--container-component-padding); } }
 
-.container--outer--full-width {
+.container--full-width {
   --component-padding: 0; }
 
 .margin-top-menu {
